Add basic structure for header area including links

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"> 
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Creative Dreams studio for musicians and artists located in Vindeln Sweden">
     <meta name="keywords" content="create dreams, musicians, artists, recording, mixing, mastering, vindeln, sweden">
@@ -9,7 +10,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Creative Dreams</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html" id="logo">
+            <h1>Creative Dreams <i class="fas fa-headphones"></i></h1>
+        </a>
+        <nav id="navigation">
+            <ul id="top-navigation">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about-us">About</a></li>
+                <li><a href="#what-we-do">Our Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
