Add rest of core structure for homepage

--- a/index.html
+++ b/index.html
@@ -28,4 +28,28 @@
     </header>
 </body>
 
+    <section id="hero">
+        Hero Image Section
+    </section>
+
+    <section id="about-us">
+        About Section
+    </section>
+
+    <section id="our-services">
+        Our Services Section
+    </section>
+
+    <section id="portfolio">
+        Portfolio Section
+    </section>
+
+    <section id="contact">
+        Contact Section
+    </section>
+
+    <section id="footer">
+        Footer Area
+    </section>
+
 </html>
