Add font awesome script

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-</body>
+
 
     <section id="hero">
         Hero Image Section
@@ -51,5 +51,11 @@
     <section id="footer">
         Footer Area
     </section>
+
+</body>
+
+<!-- Font awesome script -->
+<script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
+
 
 </html>
