Style logo and navigation  area for screens with 950px and below

--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 <body>
     <header>
         <a href="index.html" id="logo">
-            <h1>Creative Dreams <i class="fas fa-headphones"></i></h1>
-        </a>
+            <h1>Creative Dreams <i class="fas fa-headphones"></i></h1></a>
         <nav id="navigation">
             <ul id="top-navigation">
-                <li><a href="#home">Home</a></li>
                 <li><a href="#about-us">About</a></li>
                 <li><a href="#what-we-do">Our Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -28,6 +26,8 @@
     </header>
 
 
+
+    <!-- Font awesome script
     <section id="hero">
         Hero Image Section
     </section>
@@ -51,7 +51,7 @@
     <section id="footer">
         Footer Area
     </section>
-
+ -->
 </body>
 
 <!-- Font awesome script -->
