Style logo and navigation area for screens with 465px and below

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="index.html" id="logo">
-            <h1>Creative Dreams <i class="fas fa-headphones"></i></h1></a>
+            <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1></a>
         <nav id="navigation">
             <ul id="top-navigation">
                 <li><a href="#about-us">About</a></li>
@@ -25,9 +25,6 @@
         </nav>
     </header>
 
-
-
-    <!-- Font awesome script
     <section id="hero">
         Hero Image Section
     </section>
@@ -51,11 +48,10 @@
     <section id="footer">
         Footer Area
     </section>
- -->
+
 </body>
 
 <!-- Font awesome script -->
 <script src="https://kit.fontawesome.com/8d439f32ad.js" crossorigin="anonymous"></script>
-
 
 </html>
