Add hero section with image and basic styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <header>
         <a href="index.html" id="logo">
-            <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1></a>
+            <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
+        </a>
         <nav id="navigation">
             <ul id="top-navigation">
                 <li><a href="#about-us">About</a></li>
@@ -26,9 +27,17 @@
     </header>
 
     <section id="hero">
-        Hero Image Section
+        <div id="hero-image">
+            <p id="quote-plate">
+                “A creative life is an amplified life. It's a bigger life, a happier life, an expanded life, and a hell
+                of a lot more interesting life” - Elizabeth Gilbert
+            </p>
+        </div>
     </section>
 
+
+
+    
     <section id="about-us">
         About Section
     </section>
