--- a/index.html
+++ b/index.html
@@ -38,17 +38,48 @@
     </section>
 
     <section id="about-us">
-       <h1>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h1>
-    
-       <div class="about-us-content">
-        <p>Welcome to Creative Dreams! We make your dreams come true! At least within the areas of recording, mixing and mastering! Creative Dreams is located in the northern parts of Sweden in a small society called Vindeln. We started our journey in the winter of 1994 with one clear mission, to deliver top quality recordings, mixing and mastering solutions to our customers. We have worked with customers and clients from all over the world with fantastic results! The reason behind our success is our ambition to always exceed our customers expectations and with our 30 years of experience you can just sit back and enjoy the ride! We look forward to work with you!</p>
+        <h1>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h1>
 
-       </div>
-    
+        <div class="about-us-content">
+            <p>Welcome to Creative Dreams! We make your dreams come true! At least within the areas of recording, mixing
+                and mastering! Creative Dreams is located in the northern parts of Sweden in a small society called
+                Vindeln. We started our journey in the winter of 1994 with one clear mission, to deliver top quality
+                recordings, mixing and mastering solutions to our customers. We have worked with customers and clients
+                from all over the world with fantastic results! The reason behind our success is our ambition to always
+                exceed our customers expectations and with our 30 years of experience you can just sit back and enjoy
+                the ride! We look forward to work with you!</p>
+
+        </div>
+
     </section>
 
     <section id="our-services">
-        Our Services Section
+        <h1>This is what we do <i class="fa-solid fa-lightbulb"></i></h1>
+
+        <div class="our-services-grid"></div>
+        <div class="our-services-grid-element">
+            <h2>Recording <i class="fa-solid fa-record-vinyl"></i></h2>
+            <p>Today almost everyone can record music and sounds in their own home. We encourage you to do that but if you want to step up the game our great sounding studios offer the most advanced digital sound software and the best within classic analogue equipment. When you do your recordings at Creative Dreams we will make your dreams sound excellent!
+            </p>
+        </div>
+
+        <div class="our-services-grid-element">
+            <h2>Mixing <i class="fa-solid fa-sliders"></i></h2>
+            <p>The art of mixing is about blending all the recorded individual tracks to create the best possible sounding version of the song. Today there are a lot of mixing software that can be used at home to mix tracks but Creative Dreams can help you to put that little extra in the mix. With our experience and knowledge we guarantee top results!
+            </p>
+        </div>
+
+        <div class="our-services-grid-element">
+            <h2>Mastering <i class="fa-solid fa-sliders"></i></h2>
+            <p>To master a track you need to know both your art and science because it is a very complex process. There are a lot of good mastering software for home use but to be honest, you often need professionals by your side. We are those professionals and we have the skills to perfectly balance, compress, enhance and equalize your recorded material!
+            </p>
+        </div>
+
+        <div class="our-services-grid-element">
+            <h2>Brainstorming <i class="fa-solid fa-sliders"></i></h2>
+            <p>To brainstorm a track you need to know both your art and science because it is a very complex process. There are a lot of good mastering software for home use but to be honest, you often need professionals by your side. We are those professionals and we have the skills to perfectly balance, compress, enhance and equalize your recorded material!
+            </p>
+        </div>
     </section>
 
     <section id="portfolio">
