Style our services for screens with 950px and 465px below and additional responsive styling for about us

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul id="top-navigation">
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#what-we-do">Our Services</a></li>
+                <li><a href="#our-services">Our Services</a></li>
                 <li><a href="#about-us">About</a></li>
 
 
@@ -85,7 +85,7 @@
             </div>
 
             <div class="our-services-grid-element">
-                <h2>Brainstorming <i class="fa-solid fa-sliders"></i></h2>
+                <h2>Brainstorming <i class="fa-solid fa-lightbulb"></i></h2>
                 <p>To brainstorm a track you need to know both your art and science because it is a very complex
                     process. There are a lot of good mastering software for home use but to be honest, you often need
                     professionals by your side. We are those professionals and we have the skills to perfectly balance,
