--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="index.html" id="logo">
             <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
         </a>
-        <nav id="navigation">
+        <nav class="navigation">
             <ul id="top-navigation">
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
