Add basic structure for portfolio section

--- a/index.html
+++ b/index.html
@@ -40,15 +40,25 @@
     <section id="about-us">
         <h1>This is Creative Dreams <i class="fa-solid fa-people-group"></i></h1>
 
-        <div class="about-us-content">
-            <p>Welcome to Creative Dreams! We make your dreams come true! At least within the areas of recording, mixing
-                and mastering! Creative Dreams is located in the northern parts of Sweden in a small society called
-                Vindeln. We started our journey in the winter of 1994 with one clear mission, to deliver top quality
-                recordings, mixing and mastering solutions to our customers. We have worked with customers and clients
-                from all over the world with fantastic results! The reason behind our success is our ambition to always
-                exceed our customers expectations and with our 30 years of experience you can just sit back and enjoy
-                the ride! We look forward to work with you!</p>
+        <div class="about-us-grid">
+            <div class="about-us-grid-element">
+                <p>Welcome to Creative Dreams! We make your dreams come true! At least within the areas of recording,
+                    mixing
+                    and mastering! Creative Dreams is located in the northern parts of Sweden in a small society called
+                    Vindeln. We started our journey in the winter of 1994 with one clear mission, to deliver top quality
+                    recordings, mixing and mastering solutions to our customers.</p>
+            </div>
 
+            <div class="about-us-grid-element">
+
+
+                <p>We have worked with customers and clients
+                    from all over the world with fantastic results! The reason behind our success is our ambition to
+                    always
+                    exceed our customers expectations and with our 30 years of experience you can just sit back and
+                    enjoy
+                    the ride! We look forward to work with you!</p>
+            </div>
         </div>
 
     </section>
@@ -96,7 +106,45 @@
     </section>
 
     <section id="portfolio">
-        Portfolio Section
+        <h1>Portfolio <i class="fa-solid fa-folder-closed"></i></h1>
+
+        <div class="portfolio-grid">
+            <div class="portfolio-grid-element">
+
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+
+                </p>
+            </div>
+
+            <div class="portfolio-grid-element">
+
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+                </p>
+            </div>
+
+            <div class="portfolio-grid-element">
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+                </p>
+            </div>
+
+            <div class="portfolio-grid-element">
+                
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+                </p>
+            </div>
+        </div>
     </section>
 
     <section id="contact">
