Add basic styling and css grid to portfolio section

--- a/index.html
+++ b/index.html
@@ -108,6 +108,19 @@
     <section id="portfolio">
         <h1>Portfolio <i class="fa-solid fa-folder-closed"></i></h1>
 
+        <div class="portfolio-welcome">
+            <div class="portfolio-welcome-element">
+
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+
+                </p>
+            </div>
+            </div>
+
+
         <div class="portfolio-grid">
             <div class="portfolio-grid-element">
 
