Add temporary text video and audio content to portfolio section

--- a/index.html
+++ b/index.html
@@ -118,22 +118,30 @@
 
                 </p>
             </div>
-            </div>
+        </div>
 
 
         <div class="portfolio-grid">
             <div class="portfolio-grid-element">
 
-                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
-                    and here you can find examples of what we have done in the past. We have worked within many
-                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
-                    convince you to lay your trust in us and so that we can do great things together!
+                <p>
+                    <video src="assets/videos/test.mp4" type="video/mp4" controls autoplay muted loop>
+
+                        <p>
+                            Your browser doesn't support HTML5 video.
+                        </p>
+
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
+
+
+                    </video>
 
                 </p>
             </div>
 
             <div class="portfolio-grid-element">
-
+                <h2>Artist X Live Video <i class="fa-solid fa-file-video"></i></h2>
                 <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
@@ -142,6 +150,7 @@
             </div>
 
             <div class="portfolio-grid-element">
+                <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
                 <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
@@ -150,13 +159,87 @@
             </div>
 
             <div class="portfolio-grid-element">
+
+                <p>
+                    <video src="assets/videos/test.mp4" type="video/mp4" controls autoplay muted loop>
+
+                    <p>
+                        Your browser doesn't support HTML5 video.
+                    </p>
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+
+                </video>
+                </p>
+            </div>
+
+            <div class="portfolio-grid-element">
+                <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
+                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                    and here you can find examples of what we have done in the past. We have worked within many
+                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
+                    convince you to lay your trust in us and so that we can do great things together!
+                </p>
+            </div>
+
+            <div class="portfolio-grid-element">
+
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+                    </audio>
+                </p>
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+                    </audio>
+                </p>
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+                    </audio>
+                </p>
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+                    </audio>
+                </p>
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                        video.</a>
+
+                    </audio>
+                </p>
                 
-                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
-                    and here you can find examples of what we have done in the past. We have worked within many
-                    different genres of music/sound and below you can see examples of our clients. Hopefully this will
-                    convince you to lay your trust in us and so that we can do great things together!
-                </p>
             </div>
+
+
         </div>
     </section>
 
