Add basic structure for contact section

--- a/index.html
+++ b/index.html
@@ -125,15 +125,13 @@
             <div class="portfolio-grid-element">
 
                 <p>
-                    <video src="assets/videos/test.mp4" type="video/mp4" controls autoplay muted loop>
+                    <video controls autoplay muted loop>
+                        <source src="assets/videos/test.mp4" type="video/mp4">
 
-                        <p>
-                            Your browser doesn't support HTML5 video.
-                        </p>
 
+                        Your browser doesn't support HTML5 video.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
-
 
                     </video>
 
@@ -161,22 +159,21 @@
             <div class="portfolio-grid-element">
 
                 <p>
-                    <video src="assets/videos/test.mp4" type="video/mp4" controls autoplay muted loop>
+                    <video controls autoplay muted loop>
+                        <source src="assets/videos/test.mp4" type="video/mp4">
 
-                    <p>
+
                         Your browser doesn't support HTML5 video.
-                    </p>
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
 
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
+                    </video>
 
-
-                </video>
                 </p>
             </div>
 
             <div class="portfolio-grid-element">
-                <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
+                <h2>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h2>
                 <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
@@ -189,20 +186,10 @@
                 <p>
                     <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
 
-                        Your browser doesn't support HTML5 video.
+                        Your browser doesn't support HTML5 audio.
 
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
-
-                    </audio>
-                </p>
-                <p>
-                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
-
-                        Your browser doesn't support HTML5 video.
-
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
 
                     </audio>
                 </p>
@@ -211,8 +198,8 @@
 
                         Your browser doesn't support HTML5 video.
 
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
 
                     </audio>
                 </p>
@@ -221,8 +208,8 @@
 
                         Your browser doesn't support HTML5 video.
 
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
 
                     </audio>
                 </p>
@@ -231,20 +218,45 @@
 
                         Your browser doesn't support HTML5 video.
 
-                    <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
-                        video.</a>
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
 
                     </audio>
                 </p>
-                
+                <p>
+                    <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
+
+                        Your browser doesn't support HTML5 video.
+
+                        <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
+                            video.</a>
+
+                    </audio>
+                </p>
+
             </div>
 
 
         </div>
     </section>
 
-    <section id="contact">
-        Contact Section
+    <section id="Contact">
+        <h1>Contact Us <i class="fa-solid fa-address-card"></i></h1>
+
+        <div class="contact-us-grid">
+            <div class="contact-us-grid-element">
+                <p>Feel free to contact us to get started, or to just send as a greeting!</p>
+            </div>
+
+            <div class="contact-us-grid-element">
+                <p>Formulär</p>
+            </div>
+
+            <div class="contact-us-grid-element">
+                <p>Google Map</p>
+            </div>
+        </div>
+
     </section>
 
     <section id="footer">
