Style input form in contact section

--- a/index.html
+++ b/index.html
@@ -280,64 +280,69 @@
                     required.</p>
             </div>
 
-        </div>
 
 
-        <div class="contact-us-grid-element">
 
-            <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/">
+            <div class="contact-us-grid-element">
 
-                <label for="first-name">First Name*
-                </label>
-                <input id="first-name" class="text-input" type="text" name="first_name" required>
+                <form class="contact-form" method="POST" action="https://formdump.codeinstitute.net/">
 
-                <label for="last-name">Last Name*</label>
-                <input id="last-name" class="text-input" type="text" name="last_name" required>
+                    <label for="first-name">First Name: *
+                    </label>
+                    <input id="first-name" class="text-input" type="text" name="first_name" required>
 
-                <label for="email">Email Address*
-                </label>
-                <input id="email" class="text-input" type="email" name="email_address" required>
+                    <label for="last-name">Last Name: *</label>
+                    <input id="last-name" class="text-input" type="text" name="last_name" required>
+                    <label for="email">Email Address: *
+                    </label>
+                    <input id="email" class="text-input" type="email" name="email_address" required>
 
-                <label for="recording">Recording</label>
-                <input type="radio" id="recording" name="regarding_recording" value="recording" required>
+                    <label for="other">Other:</label>
+                    <textarea id="other" class="text-input-other" type="text" rows="10"></textarea>
+                    <label for="recording">Recording</label>
+                    <input type="radio" id="recording" name="regarding_topic" value="recording" required>
 
-                <label for="mixing">Mixing</label>
-                <input type="radio" id="mixing" name="regarding_mixing" value="mixing" required>
+                    <label for="mixing">Mixing</label>
+                    <input type="radio" id="mixing" name="regarding_topic" value="mixing" required>
 
-                <label for="mastering">Mastering</label>
-                <input type="radio" id="mastering" name="regarding_mastering" value="mastering" required>
+                    <label for="mastering">Mastering</label>
+                    <input type="radio" id="mastering" name="regarding_topic" value="mastering" required>
 
-                <label for="brainstorming">Brainstorming</label>
-                <input type="radio" id="brainstorming" name="regarding_brainstorming" value="brainstorming" required>
-
-                <label for="newsletter">Sign up for newsletter</label>
-                <input type="checkbox" id="newsletter" name="sign_up_newsletter">
-
-
-                <label for="other">Other</label>
-                <textarea id="other" class="text-input" type="text" rows="10"></textarea>
+                    <label for="brainstorming">Brainstorming</label>
+                    <input type="radio" id="brainstorming" name="regarding_topic" value="brainstorming" required>
+                    <hr>
 
 
-            </form>
+
+                    <label for="newsletter">Sign up for newsletter</label>
+                    <input type="checkbox" id="newsletter" name="sign_up_newsletter">
+                    <hr>
+
+                    <input class="submit-button" id="reset-button" type="reset" value="Reset">
+                    <input class="submit-button" id="submit-button" type="submit" value="Submit">
 
 
-        </div>
 
-        <div class="contact-us-grid-element">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6942.917595719306!2d19.702332305092682!3d64.21217938354455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c0bbe0e3d8215%3A0x3a67db692154a748!2sVindeln%205%2C%20922%2091%20Vindeln!5e0!3m2!1ssv!2sse!4v1657876750495!5m2!1ssv!2sse"
-                width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+                </form>
 
-        <div class="contact-us-grid-element">
-            <p id="address">
-                <p>Creative Dreams AB</p>
-                <p>Creative Road 10</p>
-                <p>123 45 Vindeln, Sweden</p>
-                <p>Phone: +46(0)123 45 67</p>
-            </p>
-        </div>
+
+            </div>
+
+            <div class="contact-us-grid-element">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6942.917595719306!2d19.702332305092682!3d64.21217938354455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x467c0bbe0e3d8215%3A0x3a67db692154a748!2sVindeln%205%2C%20922%2091%20Vindeln!5e0!3m2!1ssv!2sse!4v1657876750495!5m2!1ssv!2sse"
+                    width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+
+            <div class="contact-us-grid-element">
+                <p id="address">
+                    <p>Creative Dreams AB</p>
+                    <p>Creative Road 10</p>
+                    <p>123 45 Vindeln, Sweden</p>
+                    <p>Phone: +46(0)123 45 67</p>
+                </p>
+            </div>
         </div>
 
 
