Add alignment style to video and audio in portfolio section

--- a/index.html
+++ b/index.html
@@ -108,22 +108,16 @@
                 <ul id="clients">
                     <li>
                         <img src="assets/images/client_a.png" alt="Logo of Client A"></li>
-
                     <li>
                         <img src="assets/images/client_b.png" alt="Logo of Client B"></li>
-
                     <li>
                         <img src="assets/images/client_c.png" alt="Logo of Client C"></li>
-
                     <li>
                         <img src="assets/images/client_d.png" alt="Logo of Client D"></li>
-
                     <li>
                         <img src="assets/images/client_e.png" alt="Logo of Client E"></li>
-
                     <li>
                         <img src="assets/images/client_f.png" alt="Logo of Client F"></li>
-
                 </ul>
             </div>
         </div>
@@ -140,7 +134,7 @@
             </div>
             <div class="portfolio-grid-element">
                 <h2>Artist X Live Video <i class="fa-solid fa-file-video"></i></h2>
-                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
                     convince you to lay your trust in us and so that we can do great things together!
@@ -148,7 +142,7 @@
             </div>
             <div class="portfolio-grid-element">
                 <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
-                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
                     convince you to lay your trust in us and so that we can do great things together!
@@ -166,7 +160,7 @@
             </div>
             <div class="portfolio-grid-element">
                 <h2>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h2>
-                <p>A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
+                <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
                     convince you to lay your trust in us and so that we can do great things together!
@@ -175,12 +169,12 @@
             <div class="portfolio-grid-element">
                 <p>
                     <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
-                        Your browser doesn't support HTML5 audio.
+                        Your browser doesn't support HTML5 video.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
                             video.</a>
                     </audio>
                 </p>
-                <p>
+               <p>
                     <audio src="assets/videos/test.mp4" type="audio/mpeg" controls muted>
                         Your browser doesn't support HTML5 video.
                         <a href="https://codeinstitute.s3.amazonaws.com/HTMLEssentials/sunset.mp4">Link to the
