--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
             </div>
             <div class="our-services-grid-element">
                 <h2>Brainstorming <i class="fa-solid fa-lightbulb"></i></h2>
-                <p>To brainstorm a track you need to know both your art and science because it is a very complex
-                    process. There are a lot of good mastering software for home use but to be honest, you often need
-                    professionals by your side. We are those professionals and we have the skills to perfectly balance,
-                    compress, enhance and equalize your recorded material!
+                <p>One definition of brainstorming is <span>a group problem-solving technique that involves the spontaneuous contribution of ideas from all members of the group</span>. Creative Dreams are professionals within the area of brainstorming and we can conduct high quality brainstorming sessions i.e. with you, your band, your record label. You will not be disappointed!
                 </p>
             </div>
         </div>
@@ -115,9 +112,6 @@
                     <li>
                         <img src="assets/images/client_d.png" alt="Logo of Client D"></li>
                     <li>
-                        <img src="assets/images/client_e.png" alt="Logo of Client E"></li>
-                    <li>
-                        <img src="assets/images/client_f.png" alt="Logo of Client F"></li>
                 </ul>
             </div>
         </div>
@@ -140,8 +134,8 @@
                     convince you to lay your trust in us and so that we can do great things together!
                 </p>
             </div>
+
             <div class="portfolio-grid-element">
-                <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
                 <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
                     and here you can find examples of what we have done in the past. We have worked within many
                     different genres of music/sound and below you can see examples of our clients. Hopefully this will
@@ -149,6 +143,8 @@
                 </p>
             </div>
             <div class="portfolio-grid-element">
+                <h2>Artist Y Live Video <i class="fa-solid fa-file-video"></i></h2>
+                
                 <p>
                     <video controls autoplay muted loop>
                         <source src="assets/videos/test.mp4" type="video/mp4">
@@ -158,6 +154,7 @@
                     </video>
                 </p>
             </div>
+
             <div class="portfolio-grid-element">
                 <h2>Artist Z Audio <i class="fa-solid fa-file-audio"></i></h2>
                 <p class="portfolio-media-description">A portfolio is intended to showcase a collection of high-end work. This is Creative Dreams portfolio
@@ -203,13 +200,15 @@
                     </audio>
                 </p>
             </div>
+
+
         </div>
     </section>
     <section id="contact">
         <h1>Contact Us <i class="fa-solid fa-address-card"></i></h1>
         <div class="contact-us-grid">
             <div class="contact-us-grid-element">
-                <p>Feel free to contact us to get started, or to just send as a greeting! Fields marked with a * are
+                <p>Feel free to contact us to get started, or to just send as a greeting! Fields marked with an asterisk are
                     required.</p>
             </div>
             <div class="contact-us-grid-element">
@@ -225,13 +224,13 @@
                     <label for="other">Other:</label>
                     <textarea id="other" class="text-input-other" type="text" rows="10"></textarea>
                     <label for="recording">Recording</label>
-                    <input type="radio" id="recording" name="regarding_topic" value="recording" required>
+                    <input class="radio-input" type="radio" id="recording" name="regarding_topic" value="recording" required>
                     <label for="mixing">Mixing</label>
-                    <input type="radio" id="mixing" name="regarding_topic" value="mixing" required>
+                    <input class="radio-input" type="radio" id="mixing" name="regarding_topic" value="mixing" required>
                     <label for="mastering">Mastering</label>
-                    <input type="radio" id="mastering" name="regarding_topic" value="mastering" required>
+                    <input class="radio-input" type="radio" id="mastering" name="regarding_topic" value="mastering" required>
                     <label for="brainstorming">Brainstorming</label>
-                    <input type="radio" id="brainstorming" name="regarding_topic" value="brainstorming" required>
+                    <input class="radio-input" type="radio" id="brainstorming" name="regarding_topic" value="brainstorming" required>
                     <hr>
                     <label for="newsletter">Sign up for newsletter</label>
                     <input type="checkbox" id="newsletter" name="sign_up_newsletter">
