Change top navigation to flex instead of inline and style navigation to match media queries

--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 </head>
 
 <body>
-    <header>
+    <header class="navigation-area">
         <a href="index.html" id="logo">
             <h1>Creative Dreams <i class="fa-solid fa-headphones"></i></h1>
         </a>
         <nav class="navigation">
-            <ul id="top-navigation">
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#our-services">Our Services</a></li>
+            <ul class="top-navigation">
+                
                 <li><a href="#about-us">About</a></li>
+                <li><a href="#our-services">Our Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
